--- a/internal/http/client/views/student.html
+++ b/internal/http/client/views/student.html
@@ -164,9 +164,76 @@
     <section class="flex h-screen w-full">
     {{template "student_sidebar" .}}
     <main class="flex w-full justify-center items-center">
+      <div class="flex flex-col rounded-md w-4/5 h-4/5 m-10 p-6 bg-[#383838] shadow">
+        <div class="text-center mt-8">
+          <h3 class="text-4xl font-semibold text-gray-300">Minha conta</h3>
+        </div>
+        <form class="flex flex-col items-center justify-center w-full h-full px-15">
+          <div class="flex gap-4 mb-8 w-full">
+            <div class="w-full md:w-1/2">
+              <label for="nome" class="block mb-1 text-gray-300">Nome</label>
+              <input type="text" id="nome" value="{{.student.Name}}" disabled
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+            <div class="w-full md:w-1/2">
+              <label for="rm" class="block mb-1 text-gray-300">RM</label>
+              <input type="text" id="rm" value="{{.student.RM}}" disabled
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+          </div>
+          <div class="flex gap-4 mb-8 w-full">
+            <div class="w-full md:w-1/2">
+              <label for="email" class="block mb-1 text-gray-300">Email Institucional</label>
+              <input type="email" id="email" value="{{.student.Email}}" disabled
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+            <div class="w-full md:w-1/2">
+              <label for="senha" class="block mb-1 text-gray-300">Senha</label>
+              <div class="flex">
+                <input type="password" id="password" value="{{.student.Password}}" disabled
+                       class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded-l px-3 py-2 focus:outline-none" />
+                <button type="button" id="show_button"
+                        class="bg-[#4f4f4f] text-[#b4b4b4] border border-l-0 border-[#0f0f0f] rounded-r px-3 cursor-pointer">
 
+                  <i class="fa-solid fa-eye"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="flex gap-4 mb-8 w-full">
+            <div class="w-full md:w-1/3">
+              <label for="curso" class="block mb-1 text-gray-300">Curso</label>
+              <input type="text" id="curso" value="{{.student.Course}}" disabled
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+            <div class="w-full md:w-1/3">
+              <label for="ano" class="block mb-1 text-gray-300">Ano</label>
+              <input type="text" id="ano" value="{{formatGrade .student.Grade}}" disabled
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+            <div class="w-full md:w-1/3">
+              <label for="data-nasc" class="block mb-1 text-gray-300">Data de Nasc.</label>
+              <input type="date" id="data-nasc" value="{{formatDate .student.Birthdate}}" disabled
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+          </div>
+          <div class="flex gap-4 mb-8 w-full">
+            <div class="w-full md:w-1/2">
+              <label for="cpf" class="block mb-1 text-gray-300">CPF</label>
+              <input type="text" id="cpf" value={{.student.CPF}} disabled
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+            <div class="w-full md:w-1/2">
+              <label for="ra" class="block mb-1 text-gray-300">RA</label>
+              <input type="text" id="ra" value={{.student.RA}} disabled
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+          </div>
+        </form>
+      </div>
     </main>
     </section>
+    <script src="/assets/js/util.js"></script>
 </body>
 </html>
 {{end}}
