--- a/internal/http/client/views/manager.html
+++ b/internal/http/client/views/manager.html
@@ -1,29 +1,14 @@
 {{block "manager_home" .}}
 <!doctype html>
+{{template "manager_head" .}}
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script src="https://unpkg.com/htmx.org@2.0.4"
-      integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+"
-      crossorigin="anonymous"></script>
-    <link rel="stylesheet" 
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Gerenciamento</title>
-  </head>
-<body>
   <section class="flex h-screen w-full">
     {{template "manager_sidebar" .}}
     <div class="flex w-full justify-center items-center">
       <div class="flex flex-col rounded-md w-4/5 h-4/5 m-10 p-10 bg-[#383838] shadow">
         <h1 class="text-4xl text-center mb-8 text-gray-300">Alunos cadastrados</h1>
         <table>
-          <tr class="text-gray-300 text-center h-10">
+          <tr class="text-gray-300 text-center h-15 border border-x-0 border-b-gray-300 border-t-gray-300">
             <th>ID</th>
             <th>Nome</th>
             <th>RM</th>
@@ -31,16 +16,20 @@
             <th>Email</th>
             <th>Curso</th>
             <th>Série</th>
+            <th>Editar</th>
+            <th>Excluir</th>
           </tr>
           {{range $student := .students}}
-          <tr class="text-gray-300 text-center h-10">
-            <th>{{$student.ID}}</th>
-            <th>{{$student.Name}}</th>
-            <th>{{$student.RM}}</th>
-            <th>{{$student.CPF}}</th>
-            <th>{{$student.Email}}</th>
-            <th>{{$student.Course}}</th>
-            <th>{{formatGrade $student.Grade}}</th>
+          <tr class="text-gray-300 text-center h-15 border border-x-0 border-t-gray-300">
+            <td>{{$student.ID}}</td>
+            <td>{{$student.Name}}</td>
+            <td>{{$student.RM}}</td>
+            <td>{{$student.CPF}}</td>
+            <td>{{$student.Email}}</td>
+            <td>{{$student.Course}}</td>
+            <td>{{formatGrade $student.Grade}}</td>
+            <td><button class="w-10 h-10 cursor-pointer rounded-lg mx-auto flex items-center justify-center bg-blue-700"><i class="fa-solid fa-pencil"></i></button></td>
+            <td><button class="w-10 h-10 cursor-pointer rounded-lg mx-auto flex items-center justify-center bg-[#a8323e]"><i class="fa-solid fa-trash"></i></button></td>
           </tr>
           {{end}}
         </table>
@@ -49,6 +38,106 @@
   </section>
 </body>
 </html>
+{{end}}
+
+{{block "manager_newstudent" .}}
+<!DOCTYPE html>
+<html lang="pt-br">
+  {{template "manager_head" .}}
+<body>
+    <section class="flex h-screen w-full">
+    {{template "manager_sidebar" .}}
+    <main class="flex w-full justify-center items-center">
+      <div class="flex flex-col rounded-md w-4/5 h-4/5 m-10 p-6 bg-[#383838] shadow">
+        <div class="text-center mt-8">
+          <h3 class="text-4xl font-semibold text-gray-300">Criar aluno</h3>
+        </div>
+        <form class="flex flex-col items-center justify-center w-full h-full px-15">
+          <div class="flex gap-4 mb-8 w-full">
+            <div class="w-full md:w-1/2">
+              <label for="nome" class="block mb-1 text-gray-300">Nome</label>
+              <input type="text" id="nome"
+                      class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+            <div class="w-full md:w-1/2">
+              <label for="rm" class="block mb-1 text-gray-300">RM</label>
+              <input type="text" id="rm"                     
+                      class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+          </div>
+          <div class="flex gap-4 mb-8 w-full">
+            <div class="w-full md:w-1/2">
+              <label for="email" class="block mb-1 text-gray-300">Email Institucional</label>
+              <input type="email" id="email"
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+            <div class="w-full md:w-1/2">
+              <label for="senha" class="block mb-1 text-gray-300">Senha</label>
+              <div class="flex">
+                <input type="password" id="password"
+                       class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded-l px-3 py-2 focus:outline-none" />
+                <button type="button" id="show_button"
+                        class="bg-[#4f4f4f] text-[#b4b4b4] border border-l-0 border-[#0f0f0f] rounded-r px-3 cursor-pointer">
+
+                  <i class="fa-solid fa-eye"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="flex gap-4 mb-8 w-full">
+            <div class="w-full md:w-1/3">
+              <label for="curso" class="block mb-1 text-gray-300">Curso</label>
+              <input type="text" id="curso"
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+            <div class="w-full md:w-1/3">
+              <label for="ano" class="block mb-1 text-gray-300">Ano</label>
+              <input type="text" id="ano"
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+            <div class="w-full md:w-1/3">
+              <label for="data-nasc" class="block mb-1 text-gray-300">Data de Nasc.</label>
+              <input type="date" id="data-nasc"
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+          </div>
+          <div class="flex gap-4 mb-8 w-full">
+            <div class="w-full md:w-1/2">
+              <label for="cpf" class="block mb-1 text-gray-300">CPF</label>
+              <input type="text" id="cpf"
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+            <div class="w-full md:w-1/2">
+              <label for="ra" class="block mb-1 text-gray-300">RA</label>
+              <input type="text" id="ra"
+                     class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
+            </div>
+          </div>
+        </form>
+      </div>
+    </main>
+    </section>
+    <script src="/assets/js/util.js"></script>
+</body>
+</html>
+{{end}}
+
+{{block "manager_head" .}}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <script src="https://unpkg.com/htmx.org@2.0.4"
+    integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>{{.title}}</title>
+</head>
 {{end}}
 
 {{block "manager_sidebar" .}}
@@ -67,8 +156,16 @@
 		</div>
     <ul class="mt-2 flex-1 px-3">
 
-      <li
-        class="bg-gradient-to-bl from-blue-700 to-blue-600 relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group">
+      <li>
+        <a
+        href="/gerenciamento"
+        class='relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group
+        {{if eq .active "cadastrar-aluno"}} 
+          bg-gradient-to-bl from-blue-700 to-blue-600 
+        {{else}}
+          hover:bg-[#4f4f4f]
+        {{end}}
+        '>
         <i class="fa-solid fa-users-gear"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -82,10 +179,19 @@
           Alunos cadastrados
           </div>
         </template>
+        </a>
       </li>
 
-      <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group">
+      <li>
+        <a
+        href="/gerenciamento/cadastrar-aluno"
+        class='relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group
+        {{if eq .active "cadastrar-aluno"}} 
+          bg-gradient-to-bl from-blue-700 to-blue-600 
+        {{else}}
+          hover:bg-[#4f4f4f]
+        {{end}}
+        '>
         <i class="fa-solid fa-pen-to-square"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -99,6 +205,7 @@
           Cadastrar aluno
           </div>
         </template>
+        </a>
       </li>
 
       <li
