--- a/internal/http/client/views/manager.html
+++ b/internal/http/client/views/manager.html
@@ -48,15 +48,13 @@
     <section class="flex h-screen w-full">
     {{template "manager_sidebar" .}}
     <main class="flex w-full justify-center items-center">
-      <div class="flex flex-col rounded-md w-4/5 h-4/5 m-10 p-6 bg-[#383838] shadow">
-        <div class="text-center mt-8">
-          <h3 class="text-4xl font-semibold text-gray-300">Criar aluno</h3>
-        </div>
-        <form class="flex flex-col items-center justify-center w-full h-full px-15">
+      <div class="flex flex-col rounded-md w-4/5 h-4/5 m-10 p-10 bg-[#383838] shadow">
+        <h3 class="text-4xl text-center mb-8 text-gray-300">Cadastrar aluno</h3>
+        <form class="flex flex-col items-center justify-center w-full h-full px-15" method="post">
           <div class="flex gap-4 mb-8 w-full">
             <div class="w-full md:w-1/2">
-              <label for="nome" class="block mb-1 text-gray-300">Nome</label>
-              <input type="text" id="nome"
+              <label for="name" class="block mb-1 text-gray-300">Nome</label>
+              <input type="text" id="name"
                       class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
             </div>
             <div class="w-full md:w-1/2">
@@ -72,32 +70,27 @@
                      class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
             </div>
             <div class="w-full md:w-1/2">
-              <label for="senha" class="block mb-1 text-gray-300">Senha</label>
+              <label for="phone" class="block mb-1 text-gray-300">Telefone</label>
               <div class="flex">
-                <input type="password" id="password"
+                <input type="text" id="phone"
                        class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded-l px-3 py-2 focus:outline-none" />
-                <button type="button" id="show_button"
-                        class="bg-[#4f4f4f] text-[#b4b4b4] border border-l-0 border-[#0f0f0f] rounded-r px-3 cursor-pointer">
-
-                  <i class="fa-solid fa-eye"></i>
-                </button>
               </div>
             </div>
           </div>
           <div class="flex gap-4 mb-8 w-full">
             <div class="w-full md:w-1/3">
-              <label for="curso" class="block mb-1 text-gray-300">Curso</label>
-              <input type="text" id="curso"
+              <label for="course" class="block mb-1 text-gray-300">Curso</label>
+              <input type="text" id="course"
                      class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
             </div>
             <div class="w-full md:w-1/3">
-              <label for="ano" class="block mb-1 text-gray-300">Ano</label>
-              <input type="text" id="ano"
+              <label for="grade" class="block mb-1 text-gray-300">Ano</label>
+              <input type="text" id="grade"
                      class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
             </div>
             <div class="w-full md:w-1/3">
-              <label for="data-nasc" class="block mb-1 text-gray-300">Data de Nasc.</label>
-              <input type="date" id="data-nasc"
+              <label for="birthdate" class="block mb-1 text-gray-300">Data de Nasc.</label>
+              <input type="date" id="birthdate"
                      class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
             </div>
           </div>
@@ -112,6 +105,10 @@
               <input type="text" id="ra"
                      class="w-full bg-[#4f4f4f] text-[#b4b4b4] border border-[#0f0f0f] rounded px-3 py-2 focus:outline-none" />
             </div>
+          </div>
+          <div class="flex gap-4 mb-8 w-full items-center justify-end">
+            <a href="/gerenciamento" class="w-1/5 h-15 text-xl flex items-center justify-center rounded-lg font-semibold text-gray-300 bg-[#4f4f4f]">Voltar</a>
+            <input type="submit" class="w-1/5 h-15 text-xl rounded-lg font-semibold text-gray-300 bg-blue-700" value="Cadastrar">
           </div>
         </form>
       </div>
@@ -160,7 +157,7 @@
         <a
         href="/gerenciamento"
         class='relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group
-        {{if eq .active "cadastrar-aluno"}} 
+        {{if eq .active "alunos-cadastrados"}} 
           bg-gradient-to-bl from-blue-700 to-blue-600 
         {{else}}
           hover:bg-[#4f4f4f]
